# SciPy-2024-Tutorial

./: .editorconfig  .gitignore  README.md  proposal.md  pyproject.toml  requirements.txt
tutorial/: 00_Introduction.ipynb  01_Number_Expression_and_Imprecision.ipynb  02_Conditioning_Accuracy_and_Stability.ipynb  03_Linear_systems_of_equations.ipynb  04_Iterative_Solutions.ipynb
