[tool.poetry]
name = "scipy-2024-tutorial"
version = "0.1.0"
description = ""
authors = ["Kai Striega <kaistriega@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
jupyterlab = "^4.1.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
